<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="150dp">
    <TextView
        android:id="@+id/p_number"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/presecription"
        android:textColor="@color/scampi"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rx_number"
        android:textColor="@color/slategray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/edit_txt_bg"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/rx_number"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:cursorVisible="true"
            android:gravity="center|left"
            android:inputType="text"
            android:maxLength="12"
            android:paddingLeft="5dp"
            android:textColor="@color/scampi"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/scan"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:src="@drawable/camera" />
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/black"
                android:layout_gravity="center"/></LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/medication_name"
        android:textColor="@color/slategray"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/medication_name"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_txt_bg"
        android:cursorVisible="true"
        android:gravity="center|left"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/scampi"
        android:textSize="14sp" />
</LinearLayout>