<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="78dp"
            android:layout_height="78dp">

            <ImageView
                android:tint="@color/scampi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:src="@drawable/pharmacy"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/scampi" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/health_top_news_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:text="@string/top_news"
                android:textColor="@color/scampi"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/scampi" />
            <TextView
                android:id="@+id/health_news_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:text="@string/health_news"
                android:textColor="@color/scampi"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/scampi" />
            <TextView
                android:id="@+id/health_features_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:text="@string/health_features"
                android:textColor="@color/scampi"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/scampi" />
            <TextView
                android:id="@+id/notifications_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:text="@string/notifications"
                android:textColor="@color/scampi"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/scampi" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>