<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.pharmacy.pharmacycare.ui.refill.add.AddRefillActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/scampi"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/scampi" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/navanpharmacylogo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pharm"
                    android:tint="@color/amper" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/patient_info"
                    android:textColor="@color/slategray"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/first_name"
                android:textColor="@color/slategray"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_fname"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_txt_bg"
                android:cursorVisible="true"
                android:gravity="center|left"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/scampi"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:textColor="@color/slategray"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_lname"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_txt_bg"
                android:cursorVisible="true"
                android:gravity="center|left"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/scampi"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textColor="@color/slategray"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tet_phone"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_txt_bg"
                android:cursorVisible="true"
                android:gravity="center|left"
                android:inputType="phone"
                android:maxLength="12"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/scampi"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/scampi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pills"
                    android:tint="@color/amper" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/presecribtion"
                    android:textColor="@color/slategray"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/presecription"
                android:textColor="@color/scampi"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rx_number"
                android:textColor="@color/slategray"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/rx_scan"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/edit_txt_bg"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rx_number"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:inputType="text"
                    android:maxLength="12"
                    android:paddingLeft="5dp"
                    android:textColor="@color/scampi"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/scan"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/medication_name"
                android:textColor="@color/slategray"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/medication_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_txt_bg"
                android:cursorVisible="true"
                android:gravity="center|left"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/scampi"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rx_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/add_rx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/add_another_rx"
                android:textAllCaps="true"
                android:textColor="@color/amper" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/scampi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/address"
                    android:tint="@color/amper" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/how_deliever_msg"
                    android:textColor="@color/slategray"
                    android:textSize="16sp" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickupRb"
                    android:text="Pickup"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deliveryRb"
                    android:text="Delivery"/>
            </RadioGroup>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:text="PLEASE MAKE SURE THAT PICKUP ADDRESS IS CORRECT"-->
                <!--android:textColor="@color/slategray"-->
                <!--android:textSize="10sp" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/pick_up"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="left|center"-->
                <!--android:layout_margin="10dp"-->
                <!--android:background="@drawable/pick_up_bg"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/pickup"-->
                <!--android:textAllCaps="true"-->
                <!--android:textColor="@color/amper"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

                <!--<TextView-->
                    <!--android:textSize="12sp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/address"/>-->
        <!--</LinearLayout>-->



            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/scampi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/edit"
                    android:tint="@color/amper" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/notes"
                    android:textColor="@color/slategray"
                    android:textSize="16sp" />
            </LinearLayout>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_txt_bg"
                android:cursorVisible="true"
                android:gravity="top|left"
                android:hint="@string/notes_hint"
                android:inputType="textMultiLine"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/scampi"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/continue_refill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
